# NSPCA

python/: NSPCASolverV2.py  monte_carlo_main.py  montecarlo.py  nspcasolver.py  nspcasolverimpl.py  test_NSPCASolverImpl.py  test_NSPCASolverPy.py  test_standardize.py
src/: CMakeLists.txt
src/cudasrc/devSrc/: base.cu  base.h  cuMatExecDevice.cu  cuMatExecDevice.h  cuMatrix.cu  cuMatrix.h  cuView.cu  cuView.h  dArray.cu  forwardDeclare.h  macro.h  managed.cu  managed.h  nspcaSrc.cu  nspcaSrc.h
src/cudasrc/hostSrc/: EigenInterop.cpp  EigenInterop.h  EigenUtil.cpp  EigenUtil.h  cuMatExec.cpp  cuMatExec.h  cuSVD.cpp  cuSVD.h  dataTransfer.cpp  dataTransfer.h  devScalar.cpp  devScalar.h  devWorkSpace.cpp  devWorkSpace.h  errorHandling.cpp  errorHandling.h  internal.h  streamPool.cpp  streamPool.h
src/custat/: cuStat.cu  cuStat.cu~  cuStat.h  custat_header.h
src/custat/src/: dataframe.h  exec.h  linalg.h  util.h
src/custat/src/exec/: executor.h
src/custat/src/linalg/: linsolver.h
src/custat/src/linalg/detail/: blas_impl.h  svd_impl.h
src/custat/src/stat/: linear_lasso.h  linear_lasso_impl.h
src/custat/src/test/: predeclare.h  util.h  util_test.cpp
src/custat/src/util/: atomicAdd.h  base.h  exception.h  forward_declare  kernels.h  macro  managed.h  matrix.h  matrix_kernels.h  misc.h  scalar.h  scalar_unary_op.h  stream_pool.h  unary_op.h  view.h  workspace.h
src/cxxsrc/: Constants.h  Dim.h  Solver.cpp  Solver.h  SolverV2Init.h  Solver_old.cpp  Solver_old.h  TmpMatrices.h  test_util.h  transformed_score.h  util.h
src/cxxsrc/Threadpool/: thread_pool.h
src/cxxsrc/Threadpool/src/: FunctionWrapper.h  ThreadJoin.h  ThreadPool.h  ThreadSafeQueue.h
src/cython/: nspcagpu.cpp  nspcagpu.pyx  nspcagpu.pyx~
src/fortransrc/: GramSchmidt.f90  cumulate_cpu.f90  cumulate_cpu.f90~
src/nspcaCudalib/: macro.h  nspca_cuda.h  nspca_cuda_v1.cu  nspca_cuda_v2.cu  util.cu  view.h
src/test/: test.cpp
